# DownloaderVideoAudio

./: .gitignore  LICENSE.txt  README.md  app.py  constitucion.md  downloader.py  main.py  memory.md  plan.md  pyproject.toml  requirements.txt  spec.md
components/: __init__.py  button_component.py  checkbox_component.py  entry_component.py  label_component.py  radio_button_component.py
functions/: utils.py
src/: __init__.py
src/core/: __init__.py  logger.py
src/models/: __init__.py  media.py
src/services/: __init__.py  download.py  filesystem.py  persistence.py  thumbnail.py
src/ui/: __init__.py  main_window.py  widgets.py
src/workers/: __init__.py  download_worker.py
tests/: __init__.py  test_services.py
